--- a/item.html
+++ b/item.html
@@ -8,12 +8,12 @@
   <header class="main-header">
       <div class="container">
         <nav class="main-navigation">
-          <ul>
-            <li><a href="#">Информация</a></li>
-            <li><a href="#">Новости</a></li>
-            <li><a href="#">Прайс-лист</a></li>
-            <li><a href="#">Магазин</a></li>
-            <li><a href="#">Контакты</a></li>
+          <ul class="navbar">
+            <li class="navbar-item"><a class="navbar-item-link" href="#">Информация</a></li>
+            <li class="navbar-item"><a class="navbar-item-link" href="#">Новости</a></li>
+            <li class="navbar-item"><a class="navbar-item-link" href="#">Прайс-лист</a></li>
+            <li class="navbar-item"><a class="navbar-item-link" href="#">Магазин</a></li>
+            <li class="navbar-item"><a class="navbar-item-link" href="#">Контакты</a></li>
           </ul>
         </nav>
 
@@ -27,33 +27,32 @@
       <div class="container">
 
       <ul class="breadcrumbs">
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="catalog.html">Магазин</a></li>
-        <li><a href="#">Средства для ухода</a></li>
+        <li class="breadcrumbs-item"><a class="breadcrumbs-item-link" href="index.html">Главная</a></li>
+        <li class="breadcrumbs-item"><a class="breadcrumbs-item-link" href="catalog.html">Магазин</a></li>
+        <li class="breadcrumbs-item"><a class="breadcrumbs-item-link" href="#">Средства для ухода</a></li>
         <li>Baxter of California</li>
       </ul>
 
       <div class="row">
 
       <div class="column-left">
-        <div class="item-imgs">
-          <a href="#" class="item-img big"><img src="http://placehold.it/500x500" alt="Baxter of California-1"></a>
-          <a href="#" class="item-img small"><img src="http://placehold.it/150x150" alt="Baxter of California-2"></a>
-          <a href="#" class="item-img small"><img src="http://placehold.it/150x150" alt="Baxter of California-3"></a>
-          <a href="#" class="item-img small"><img src="http://placehold.it/150x150" alt="Baxter of California-4"></a>
-        </div>
+        <figure class="img-big">
+          <a href="#" class="img-big-link"><img src="http://placehold.it/500x500" alt="Baxter of California-1"></a>
+        </figure>
+        <figure class="img-small"> 
+          <ul class="item-img-small-all">         
+            <li class="item-img-small"><a href="#" class="img-small-link"><img src="http://placehold.it/150x150" alt="Baxter of California-2"></a></li>
+            <li class="item-img-small"><a href="#" class="img-small-link"><img src="http://placehold.it/150x150" alt="Baxter of California-3"></a></li>
+            <li class="item-img-small"><a href="#" class="img-small-link"><img src="http://placehold.it/150x150" alt="Baxter of California-4"></a></li>
+        </figure>
       </div>
 
       <div class="column-right">
-
-        <div class="item-id">
-          <p class="id-number">Артикул: Dexter-ae</p>
-          <p>Есть в наличии</p>
-        </div>
-
-          <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, 
-             что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, 
-             крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
+        <p class="id-number">Артикул: Dexter-ae</p>
+        <p>Есть в наличии</p>
+        <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, 
+           что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, 
+           крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
            
         <div class="price item">
           <p class="price-text">2 900 руб.</p>
