Добавил графику и текстовые стили.

--- a/item.html
+++ b/item.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Барбершоп «Бородинский»</title>
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
   <header class="main-header">
@@ -37,23 +39,24 @@
 
       <div class="column-left">
         <figure class="img-big">
-          <a href="#" class="img-big-link"><img src="http://placehold.it/500x500" alt="Baxter of California-1"></a>
+          <a href="#" class="img-big-link"><img src="img/item-pic-big.jpg" width="460" height="498" alt="Baxter of California-1"></a>
         </figure>
-        <figure class="img-small"> 
-          <ul class="item-img-small-all">         
-            <li class="item-img-small"><a href="#" class="img-small-link"><img src="http://placehold.it/150x150" alt="Baxter of California-2"></a></li>
-            <li class="item-img-small"><a href="#" class="img-small-link"><img src="http://placehold.it/150x150" alt="Baxter of California-3"></a></li>
-            <li class="item-img-small"><a href="#" class="img-small-link"><img src="http://placehold.it/150x150" alt="Baxter of California-4"></a></li>
+        <figure class="img-small">
+          <ul class="item-img-small-all">
+            <li class="item-img-small"><a href="#" class="img-small-link"><img src="img/item-pic-small-1.jpg" width="140" height="149" alt="Baxter of California-2"></a></li>
+            <li class="item-img-small"><a href="#" class="img-small-link"><img src="img/item-pic-small-2.jpg" width="140" height="149" alt="Baxter of California-3"></a></li>
+            <li class="item-img-small"><a href="#" class="img-small-link"><img src="img/item-pic-small-3.jpg" width="140" height="149" alt="Baxter of California-4"></a></li>
+          </ul>
         </figure>
       </div>
 
       <div class="column-right">
         <p class="id-number">Артикул: Dexter-ae</p>
         <p>Есть в наличии</p>
-        <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, 
-           что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, 
+        <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все,
+           что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем,
            крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
-           
+
         <div class="price item">
           <p class="price-text">2 900 руб.</p>
           <a class="price-btn" href="#">купить</a>
