--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Барбершоп «Бородинский»</title>
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
 
@@ -57,7 +59,7 @@
 
         <div class="side-right">
           <figure class="item">
-            <a href=""><img src="http://placehold.it/150x100" alt="Набор для путешествий"></a>
+            <a href=""><img src="img/catalog-item-1.jpg" width="220" height="165" alt="Набор для путешествий"></a>
             <div class="item-description">
               <h3>Baxter of California</h3>
               <p>Набор для путешествий</p>
@@ -69,7 +71,7 @@
           </figure>
 
           <figure class="item">
-            <a href=""><img src="http://placehold.it/150x100" alt="Увлажняющий кондиционер"></a>
+            <a href=""><img src="img/catalog-item-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер"></a>
             <div class="item-description">
               <h3>Baxter of California</h3>
               <p>Увлажняющий кондиционер</p>
@@ -81,7 +83,7 @@
           </figure>
 
           <figure class="item">
-            <a href=""><img src="http://placehold.it/150x100" alt="Гель для волос"></a>
+            <a href=""><img src="img/catalog-item-3.jpg" width="220" height="165"  alt="Гель для волос"></a>
             <div class="item-description">
               <h3>Suavecito</h3>
               <p>Гель для волос</p>
@@ -93,7 +95,7 @@
           </figure>
 
           <figure class="item">
-            <a href=""><img src="http://placehold.it/150x100" alt="Глина для укладки волос"></a>
+            <a href=""><img src="img/catalog-item-4.jpg" width="220" height="165"  alt="Глина для укладки волос"></a>
             <div class="item-description">
               <h3>American crew</h3>
               <p>Глина для укладки волос</p>
@@ -105,7 +107,7 @@
           </figure>
 
           <figure class="item">
-            <a href=""><img src="http://placehold.it/150x100" alt="Гель для волос"></a>
+            <a href=""><img src="img/catalog-item-5.jpg" width="220" height="165"  alt="Гель для волос"></a>
             <div class="item-description">
               <h3>American crew</h3>
               <p>Гель для волос</p>
@@ -117,7 +119,7 @@
           </figure>
 
           <figure class="item">
-            <a href="#"><img src="http://placehold.it/150x100" alt="Набор для бритья"></a>
+            <a href="#"><img src="img/catalog-item-6.jpg" width="220" height="165"  alt="Набор для бритья"></a>
             <div class="item-description">
               <h3>Baxter of California</h3>
               <p>Набор для бритья</p>
